tests/errors/first_stage/.define/invalid_name/invalid_name.as
; invalid name for a constant
.define my_const = -2